--- a/package.json
+++ b/package.json
@@ -1,35 +1,19 @@
 {
-  "name": "unitTest",
-  "version": "0.0.1",
-  "description": "unitTest",
-  "authors": "Clarisoft",
-  "license": "SEE LICENSE IN LICENSE",
-  "homepage": "http://clarisoft.com",
+  "name": "unit-tests",
+  "version": "1.0.0",
+  "description": "Showcase unit tests",
+  "main": "app.js",
+  "scripts": {
+    "test": "npm test"
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/agenes-clarisoft/unitTests.git"
+    "url": "git+https://github.com/agenes-clarisoft/unitTests.git"
   },
-  "scripts": {
-    "init": "npm install",
-    "test": "bash ucepTest",
-    "debug": "node debug app.js",
-    "start": "NODE_ENV=dev webpack && sails lift",
-    "postinstall": "(cd utils; npm install)"
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/agenes-clarisoft/unitTests/issues"
   },
-  "main": "app.js",
-  "dependencies": {
-    "angular": "1.6.4",
-    "angular-animate": "1.6.4",
-    "angular-aria": "1.6.4",
-    "angular-file-saver": "1.1.3",
-    "angular-loading-bar": "0.9.0",
-    "angular-material": "1.1.4",
-    "angular-material-data-table": "0.10.10",
-    "angular-messages": "1.6.4",
-    "angular-sanitize": "1.6.4",
-    "angular-translate": "2.15.1",
-    "angular-ui-router": "0.4.2",
-    "lodash": "4.17.4",
-    "request": "2.81.0"
-  }
+  "homepage": "https://github.com/agenes-clarisoft/unitTests#readme"
 }
