--- a/package.json
+++ b/package.json
@@ -15,5 +15,16 @@
   "bugs": {
     "url": "https://github.com/agenes-clarisoft/unitTests/issues"
   },
-  "homepage": "https://github.com/agenes-clarisoft/unitTests#readme"
+  "homepage": "https://github.com/agenes-clarisoft/unitTests#readme",
+  "devDependencies": {
+    "angular": "^1.6.6",
+    "angular-mocks": "^1.6.6",
+    "angular-ui-router": "^0.4.3",
+    "jasmine-core": "^2.8.0",
+    "karma": "^1.7.1",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-requirejs": "^1.1.0",
+    "karma-spec-reporter": "0.0.31"
+  }
 }
