--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "unit-tests",
   "version": "1.0.0",
   "description": "Showcase unit tests",
-  "main": "app.js",
+  "main": "./app.js",
   "scripts": {
-    "test": "npm test"
+    "start": "http-server ./app -a localhost -p 8000 -c-1",
+    "test": "karma start karma.conf.js"
   },
   "repository": {
     "type": "git",
@@ -18,13 +19,27 @@
   "homepage": "https://github.com/agenes-clarisoft/unitTests#readme",
   "devDependencies": {
     "angular": "^1.6.6",
-    "angular-mocks": "^1.6.6",
+    "angular-mocks": "1.6.6",
     "angular-ui-router": "^0.4.3",
     "jasmine-core": "^2.8.0",
     "karma": "^1.7.1",
     "karma-chrome-launcher": "^2.2.0",
+    "karma-cli": "^1.0.1",
+    "karma-firefox-launcher": "^1.0.1",
     "karma-jasmine": "^1.1.0",
-    "karma-requirejs": "^1.1.0",
+    "karma-phantomjs-launcher": "^1.0.4",
     "karma-spec-reporter": "0.0.31"
+  },
+  "dependencies": {
+    "@uirouter/angularjs": "^1.0.10",
+    "angular": "^1.6.6",
+    "angular-animate": "^1.6.6",
+    "angular-aria": "^1.6.6",
+    "angular-material": "^1.1.5",
+    "angular-messages": "^1.6.6",
+    "angular-sanitize": "^1.6.6",
+    "http-server": "^0.10.0",
+    "lodash": "^4.17.4",
+    "ngstorage": "^0.3.11"
   }
 }
